# keep-me-contributing-hs

./: .gitignore  ChangeLog.md  build-hsjar.sh  build.gradle  cabal.config  error-progurard.txt  eta-first.cabal  install-jar-built-by-eta.sh  keep-me-contributing-hs.cabal
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/info/igreque/keepmecontributinghs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/hs/: Export.hs
app/src/main/hs/Info/Igreque/: Android.hs
app/src/main/hs/KeepMeContributingHs/: Android.hs  Core.hs  Date.hs  Test.hs
app/src/main/hs/KeepMeContributingHs/Android/: Date.hs  Github.hs
app/src/main/hslib/: KeepMeContributingHs.hs
app/src/main/hslib/KeepMeContributingHs/: Github.hs
app/src/main/java/info/igreque/keepmecontributinghs/: AppCompatPreferenceActivity.java  KeepMeContributingWidgetProvider.java  SettingsActivity.java
app/src/main/res/layout/: keep_me_contributing_widget_info_appwidget.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: keep_me_contributing_widget_info.xml  pref_headers.xml
app/src/test/hslib/: Spec.hs
app/src/test/java/info/igreque/keepmecontributinghs/: ExampleUnitTest.java
hs/: ChangeLog.md  eta-first.cabal
hs/src/Info/Igreque/: Android.hs
