name:                keep-me-contributing-hs
version:             0.1.0.0
synopsis:            First Eta project
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          whosekiteneverfly@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  exposed-modules:     KeepMeContributingHs
  build-depends:       base >=4.8 && < 5.0
                     , base-orphans == 0.5.4
                     , containers >= 0.5.8.1 && <= 0.5.9.1
                     , filepath >= 1.4.1.0 && <= 1.4.1.1
                     , github
                     -- , github >= 0.16.0
                     , vector
                     -- , vector >= 0.12.0
  hs-source-dirs:      app/src/main/hslib
  default-language:    Haskell2010
  -- default-extensions:  OverloadedStrings

executable keep-me-contributing-hs
  main-is:             Info/Igreque/Android.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , keep-me-contributing-hs
  hs-source-dirs:      app/src/main/hs
  default-language:    Haskell2010

test-suite keep-me-contributing-hs-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , keep-me-contributing-hs
  hs-source-dirs:      app/src/test/hslib
  default-language:    Haskell2010
