name:                keep-me-contributing-hs
version:             0.1.0.0
synopsis:            First Eta project
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Yuji Yamamoto
maintainer:          whosekiteneverfly@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable keep-me-contributing-hs
  main-is:             Export.hs
  -- other-extensions:
  other-modules:       KeepMeContributingHs
                     , KeepMeContributingHs.Date
                     , KeepMeContributingHs.Github
  build-depends:       base >=4.8 && < 5.0
                     , time >= 1.6.0.1 && <= 1.8.0.3
                     , hspec
  hs-source-dirs:      app/src/main/hs
  default-language:    Haskell2010
